# rucene

./: Cargo.toml
examples/: example.rs
src/: lib.rs
src/core/codec/postings/: for_util.rs
src/core/index/reader/: segment_reader.rs
src/core/index/writer/: index_writer.rs
src/core/search/query/: phrase_query.rs
src/core/store/io/: mmap_index_input.rs
src/core/util/packed/: packed_misc.rs
