[package]
name = "rucene"
version = "0.1.1"
authors = ["Zhihu Search Team"]
repository = "https://github.com/zhihu/rucene"
license-file = "LICENSE"
description = """
Rucene is a Rust port of the popular Apache Lucene project. Rucene is 
not a complete application, but rather a code library and API that 
can easily be used to add full text search capabilities to applications.
"""

[dependencies]
bytes = "1.1.0"
chan = "0.1.23"
chan-signal = "0.3.3"
crc = "1.8.1"
crossbeam = "0.8.1"
either = "1.6.1"
error-chain = "0.12.4"
fasthash = "0.4.0"
flate2 = "1.0.22"
lazy_static = "1.4.0"
log = "0.4.14"
memmap = "0.7.0"
num_cpus = "1.13.0"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
thread_local = "0.3.6"
smallvec = "1.7.0"
unicode_reader = "1.0.1"
num-traits = "0.2.14"
byteorder = "1.4.3"
crunchy = "0.2.2"

[dev-dependencies]
tempfile = "3.2.0"

# The release profile, used for `cargo build --release`
[profile.release]
debug = true
